--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,12 @@
         @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold hover:bg-white/10 transition duration-300;
     }
 }
+.font-sans{
+    font-family: var(--font-sans);
+}
+.font-mono{
+    font-family: var(--font-mono);
+}
+.font-serif{
+    font-family: var(--font-serif);
+}
